src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ask Dave to Add New Category</fullName>
                </value>
                <value>
                    <fullName>IFA</fullName>
                </value>
                <value>
                    <fullName>Potential Lender</fullName>
                </value>
                <value>
                    <fullName>Introducer</fullName>
                </value>
                <value>
                    <fullName>Borrower</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deskcom__twitter_username__c</fullName>
        <label>Twitter Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_List_Reference__c</fullName>
        <label>Mailing List Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_by__c</fullName>
        <label>Referred by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remove_from_Mailing_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove from Mailing List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Networking event</fullName>
                </value>
                <value>
                    <fullName>Other (ask Dave if needs extending)</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>testingDPM</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>testingDPM</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>